src/test/fail/show_no_value.ly
<@lily    method m():nil {  } show m()    @>